# teacher-agents

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  app_chainlit.py  chainlit.md  main.py  pyproject.toml
.cursor/rules/: command-rules.mdc  dependency-management-rule.mdc  development-workflow-rule.mdc  knowledge-management-rule.mdc  location-rule.mdc  on-load-rule.mdc  project-onboarding-rule.mdc  python-documentation.mdc  python-performance.mdc  python-security.mdc  python-style.mdc  python-testing.mdc  simplicity-first-rule.mdc  specification-management-rule.mdc  terminal-command-prefix-rule.mdc  test-driven-development-rule.mdc  visualization-rule.mdc
.cursor/specs/architecture/: agentic_teacher_system.md
.cursor/specs/mvp/: teacher_mvp_definition.md
.cursor/tasks/: TASK-2024-07-26-01.md  TASK-2024-07-26-02.md  TASK-2024-07-26-03.md  TASK-2024-07-26-04.md  TASK-2024-07-26-05.md  TASK-2024-07-26-06.md  TASK-2024-07-26-07.md  TASK-2024-07-26-08.md  TASK-2024-07-26-09.md  TASK-2024-07-27-01.md  TASK-2024-07-27-02.md
.github/workflows/: test.yml
src/: orchestration.py
src/agents/: answer_evaluator_agent.py  journey_crafter_agent.py  onboarding_agent.py  pedagogical_master_agent.py  step_evaluator_agent.py  teacher_agent.py
tests/: test_dummy.py
tests/agents/: debug_teacher_agent.py  test_answer_evaluator_agent.py  test_journey_crafter_agent.py  test_onboarding_agent_integration.py  test_pedagogical_master_agent.py  test_step_evaluator_agent.py  test_teacher_agent.py
